@@ -89,7 +89,8 @@ Other changes:
 * Added support for specifying CVS_RSH in the <cvs/> task
 
 * New tasks bzip2 and bunzip2 to pack and unpack files using the 
-  BZip2 alogrithm, replaceregexp, checksum, translate, waitfor, input
+  BZip2 alogrithm, replaceregexp, checksum, translate, waitfor, input,
+  manifest
 
 * The attributes zipfile, jarfile, warfile and earfile (from the Zip, 
   Jar, War and Ear tasks) have been deprecated and superseded by a 
